--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="container">
+    <main class="container">
       <div class="product">
         <div class="product__container">
           <div class="product__img-container">
@@ -41,12 +41,12 @@
             />
           </div>
           <div class="product__details">
-            <div class="type">Perfumer</div>
-            <div class="title">Gabrielle Essence Eau De Parfum</div>
-            <div class="description">
+            <h5 class="type">Perfumer</h5>
+            <h1 class="title">Gabrielle Essence Eau De Parfum</h1>
+            <p class="description">
               A floral, solar and voluptuous interpretation composed by Olivier
               Polge, Perfumer-Creator for the House of CHANEL.
-            </div>
+            </p>
             <div class="price-container">
               <div class="current">$149.99</div>
               <div class="old">$169.99</div>
@@ -65,6 +65,6 @@
         >. Coded by
         <a href="https://github.com/arbabhsiddiqui">Arbab Hussain</a>.
       </div>
-    </div>
+    </main>
   </body>
 </html>
